# gradworks

./: .gitignore  README  hello_1.0.tgz
EvalSegmentation/: CMakeLists.txt  EvalFloatPPV.cpp  EvalLesionSegmentation.cpp  EvalPPV.cpp  Makefile  ReadMe.txt
FEM/: kfem.cpp  (+4 more)
Graphics/GLTest/: CMakeLists.txt  Nehe9.cpp  Nehe9.h  QGLProxyWidget.cpp  QGLProxyWidget.h  QGlyphWidget.cpp  QGlyphWidget.h  gltest.cpp  glwindow.cpp  glwindow.h  glwindow.ui
VisProjects/SSTVis/: CMakeLists.txt  QGraphicsImageItem.cpp  QGraphicsImageItem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  vis.cpp
imageParticles/: .CMakeLists.txt.swp  CMakeLists.txt  NBody.h  SurfaceEntropyCostFunction.cpp  SurfaceEntropyCostFunction.h  SurfaceEntropyNLP.h  imageParticleCore.cpp  imageParticleCore.h  imageParticleTypes.h  itkARGBColormapFunction.h  itkImageIO.h  itkMyFRPROptimizer.cpp  itkMyPowellOptimizer.cpp  itkMyRegularStepGradientDescentBaseOptimizer.cxx  itkParticleAttribute.h  itkParticleContainerArrayAttribute.h  itkParticleDomain.hxx  itkParticleEntropyGradientFunction.hxx  itkParticleEvents.h  itkParticleGaussianModeWriter.hxx  itkParticleGeneralEntropyGradientFunction.h  itkParticleGeneralEntropyGradientFunction.hxx  itkParticleShapeMatrixAttribute.h  itkParticleSystem.hxx  itkScalarToARGBColormapImageFilter.h  itkSphereBoundedGradientDescentOptimizer.cxx  itkSphereBoundedGradientDescentOptimizer.h  main.cpp  mainwindow.cpp  mainwindow.h  particlesUI.ui  patchcompare.ui  qmygraphicsview.cpp  qmygraphicsview.h
itkProjects/Particles/: CMakeLists.txt  ParticleView3D.ui  QGraphicsDirectionItem.cpp  QGraphicsDirectionItem.h  QGraphicsEventItem.cpp  QGraphicsEventItem.h  QGraphicsGridItem.cpp  QGraphicsGridItem.h  QGraphicsImageItem.cpp  QGraphicsImageItem.h  QGraphicsParticleItems.cpp  QGraphicsParticleItems.h  QGraphicsPatchItem.cpp  QGraphicsPatchItem.h  QGraphicsPolygonDrawingInteraction.cpp  QGraphicsPolygonDrawingInteraction.h  QGraphicsRectWidget.cpp  QGraphicsRectWidget.h  QGraphicsZoomView.cpp  QGraphicsZoomView.h  QParticlesGraphicsItem.cpp  QParticlesGraphicsItem.h  airAlgorithmManager.cpp  airAlgorithmManager.h  airCLI.cpp  airCLI.h  airImageAlgorithm.cpp  airImageAlgorithm.h  airSuperZoom.cpp  airSuperZoom.h  bigViewWindow.cpp  bigViewWindow.h  bigViewWindow.qrc  bigViewWindow.ui  bigview.cpp  bigview.h  collisionTest.cpp  collisionTest.h  config.txt  dialogBSplineVis.h  (+205 more)
itkProjects/ParticlesGUI/: .CMakeLists.txt.swp  CMakeLists.txt  ImageParticleCostFunction.h  ParticleIO.h  PropertyAccess.cpp  PropertyAccess.h  QGraphicsGridItem.cpp  bsplineReg.cxx  dialogBSplineVis.cpp  dialogBSplineVis.h  dialogBSplineVis.ui  dialogPatchCompare.cpp  dialogPatchCompare.h  dialogPatchCompare.ui  itkARGBColorFunction.h  itkDomainConstrainedDescentOptimizer.cxx  itkDomainConstrainedDescentOptimizer.h  itkImageCommon.h  itkImageIO.h  itkLaplaceFunctionRestrictedDomain.hxx  itkLaplaceGradientImageFilter.h  itkLaplaceGradientImageFilter.hxx  itkLaplaceImageFilterRestrictedDomain.h  itkLaplaceImageFilterRestrictedDomain.hxx  itkMyDenseFiniteDifferenceImageFilter.h  itkMyDenseFiniteDifferenceImageFilter.hxx  itkOptimizerCommon.h  itkPropagateBCFilter.hxx  itkScalarToARGBColormapImageFilter.h  itkSolveLaplacianImageFilter.hxx  mainwindow.cpp  mainwindow.h  mainwindow.ui  myBSplineRegistration.cpp  (+53 more)
itkapps/: CMakeLists.txt  DCRegionGrowingAlgorithm.cxx  IRISVectorTypesToITKConversion.h  PCNNSegmentation.xml  PixelMath.cxx  PixelMathImageFilter.txx  PixelMathPresso.cxx  SNAPCommon.h  complex_eigen.cxx  deformationfieldio.cxx  deformationfieldio.h  dtitypes.h  inp.cxx  itkAbsFilter.cxx  itkAdaptiveHistogramEqualizer.cxx  itkBinaryFilter.cpp  itkChangeLabelShort.cxx  itkChangeSpacing.cxx  itkConComp.cxx  itkDeformationFieldTransformReader.cxx  itkGradientFilter.cxx  itkHFieldToDeformationFieldImageFilter.txx  itkImageCompress.cxx  itkImageIO.h  itkJacobianImageFilter.h  itkLabelGeometry.cxx  itkLabelMapCompress.cxx  itkLabelMapMorphology.xml  itkMeanOnVectorImageFilter.txx  itkMeshImageAlign.cxx  itkMeshSamplingCLP.h  itkMinMaxVectorProductImageFilter.txx  itkPlaneGenerator.cxx  itkPlaneSpatialFunction.h  itkRandomWalker2.cxx  itkReassignLabelFilter.h  itkRelabelFilter.cxx  itkRotationSample.cxx  itkSampleMesh.cxx  itkSampleMesh.xml  (+30 more)
itkcmds/: CMakeLists.txt  MatrixCode.cpp  imageRegistration.cpp  itkCompositeTransform.cpp  itkFastMeanSquaredMetric.h  itkImageCommon.h  itkImageIO.h  itkImageMatch.cxx  itkImageReg.cpp  itkMathCode.h  itkMetaMetrics.h  itkMultiReg.cpp  itkMyEulerTransform.h  itkMyFRPROptimizer.cpp  itkMyFRPROptimizer.h  itkMyMetric.h  itkMyMetric.hxx  itkMyMetricBase.h  itkMyRegularStepGradientDescentBaseOptimizer.cxx  itkMyRegularStepGradientDescentBaseOptimizer.h  itkMyRegularStepGradientDescentOptimizer.cxx  itkMyRegularStepGradientDescentOptimizer.h  itkNineTransform.cpp  itkOptimizationReporter.h  itkResampler.h  itkRigidReg.cpp  itkTransform.cpp  itkVersorRigid3DTransformOptimizer.h  itkVersorTransformOptimizer.cxx  itkVersorTransformOptimizer.h  itkinfo.cpp  resampleImage.cpp  samplePixel.cpp  volumeRegistration.cpp
itktools/: .CMakeLists.txt.swp  CMakeLists.txt  MatrixCode.h  guiregTest.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  itkMetaMetrics.h  itkMultiRegMethod.cpp  itkMultiRegMethod.h  itkMyCore.cpp  itkMyCore.h  itkMyFRPROptimizer.cpp  itkMyMetric.h  itkMyMetricBase.hxx  itkMyRegistration.h  itkMyRegularStepGradientDescentBaseOptimizer.cxx  itkMyRegularStepGradientDescentBaseOptimizer.h  itkMyScaleVersor3DTransformOptimizer.cxx  itkMyScaleVersor3DTransformOptimizer.h  itkMySlice.h  itkMySlicer.h  itkMyTransformFilter.h  itkMyTransformFilter.hxx  itkMyTypes.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cxx  ui_mainwindow.h
opencvapps/: CMakeLists.txt  run1.cpp
pnsc++/: CMakeLists.txt  ExpLogTransform.cpp  ExpLogTransform.h  PNSBase.h  PNSCostFunction.cpp  PNSCostFunction.h  PNSMath.cpp  PNSMath.h  itkMyFRPROptimizer.cpp  itkMyFRPROptimizer.h  itkSphereOptimizer.cxx  itkSphereOptimizer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pnsMath.h
(+466 files in other folders)
