PROJECT(EvalLesionSegmentation)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
    INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
    MESSAGE(FATAL_ERROR
    "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

FIND_PATH(ANN_PATH NAMES ANN)
FIND_LIBRARY(ANN_LIB NAMES ann PATHS ${ANN_PATH})

INCLUDE_DIRECTORIES(${ANN_PATH})

ADD_EXECUTABLE( EvalLesionSegmentation EvalLesionSegmentation.cpp)
ADD_EXECUTABLE (EvalPPV EvalPPV.cpp)

TARGET_LINK_LIBRARIES( EvalLesionSegmentation ITKIO ITKBasicFilters ITKCommon ${ANN_LIB})
TARGET_LINK_LIBRARIES( EvalPPV ITKIO ITKBasicFilters ITKCommon)
