PROJECT(gltest)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Qt REQUIRED COMPONENTS QtOpenGL)
SET(QT_USE_QTOPENGL TRUE)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR}  ${GLUT_INCLUDE_DIRS})


SET(QT_gltest_HEADERS glwindow.h QGlyphWidget.h)
SET(QT_gltest_SOURCES glwindow.cpp QGlyphWidget.cpp)
QT4_WRAP_CPP(QT_gltest_MOC_HEADERS ${QT_gltest_HEADERS})
QT4_WRAP_UI(QT_gltest_UI_FILES glwindow.ui)
#QT4_ADD_RESOURCES(QT_gltest_RCC glwindow.qrc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(gltest gltest.cpp ${QT_gltest_HEADERS} ${QT_gltest_SOURCES} ${QT_gltest_MOC_HEADERS} ${QT_gltest_UI_FILES})
TARGET_LINK_LIBRARIES(gltest ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
